# pytorch-object-detection-fundamentals

./: .gitignore  README.md  dataset.py  inference.ipynb  inference.py  model.py  pyproject.toml  requirements.txt  train.py  utils.py
